--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <button id="show">show index</button>
     <button id="showInfo">show info</button>
+    <button id="logInfo">Log info</button>
 
 
 </body>
