improve remaing time function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <button id="show">show index</button>
     <button id="showInfo">show info</button>
     <button id="logInfo">Log info</button>
+    <button id="time_left" disabled>Time left to end this song</button>
 
 
 </body>
