--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <button id="btn">Play</button>
     <button id="next">Next</button>
     <button id="back">Back</button>
+    <button id="up">+</button>
+    <button id="down">-</button>
+
 
     <button id="show">show index</button>
     <button id="showInfo">show info</button>
