--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <button id="btn">Play</button>
     <button id="next">Next</button>
     <button id="back">Back</button>
-    <button id="up">+</button>
-    <button id="down">-</button>
+    <input type="range" step=".05" max="1" min="0" id="volume" />
 
 
     <button id="show">show index</button>
