--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button id="btn">Play</button>
     <button id="next">Next</button>
     <button id="back">Back</button>
-    <input type="range" step=".05" max="1" min="0" id="volume" />
+    <input type="range" step=".05" value=".4"  max="1" min="0" id="volume" />
 
 
     <button id="show">show index</button>
